Add Applications, Validation under usage, move description from top of file down into Applications

--- a/usage/_posts/1900-01-02-options.md
+++ b/usage/_posts/1900-01-02-options.md
@@ -12,15 +12,15 @@ you'd like to add.
 
   // Specify them when this library is loaded like so:
   var options = {
-      local_only: true,
-      https_always: true
+      localOnly: true,
+      httpsAlways: true
   };
   var batch = require('batch-request')(options);
 
   // Or as a shortcut:
   var batch = require('batch-request')({
-      local_only: true,
-      https_always: true
+      localOnly: true,
+      httpsAlways: true
   });
 
 {% endhighlight %}
@@ -29,11 +29,11 @@ Then when you use Batch Request, it will use thes options.
 
 Available options:
 
-* `local_only` - `true` or `false`. Defaults to `true`. If `true`, **batch request** will batch only local
+* `localOnly` - `true` or `false`. Defaults to `true`. If `true`, **batch request** will batch only local
   requests. This is the default in order to prevent the outside world from using this batch endpoint on
   your server as a proxy and making requests to other servers. If `false`, it will take any batch requests.
   Note: Do not set this to `false` unless you have other validation middleware in place to prevent nasty
   attacks.
-* `https_always` - `true` or `false`. Defaults to `false`. If set to `true`, **batch request** will make
+* `httpsAlways` - `true` or `false`. Defaults to `false`. If set to `true`, **batch request** will make
   force all requests over https even if the incoming object doesn't specify them as such.
 * `max` - a number representing the largest batch size the middleware will accept. Defaults to `100`.
