Add faq, fill out other docs more

--- a/requests/_posts/1900-01-01-intro.md
+++ b/requests/_posts/1900-01-01-intro.md
@@ -2,9 +2,7 @@
 title: intro
 ---
 
-The simplest case is just to send a couple of requests as JSON.
-
-A request object is simply a JavaScript object with a series of keys.
+The simplest case is just to send a single request as JSON. A request object is simply a JSON object with one or more keys.
 
 Each key represents one request. The key can be any string value of your choosing. This key is used to identify your request and will be sent back in your reply.
 
@@ -21,12 +19,12 @@ Now let's add one super basic request:
 {
     "myRequest": {
         "method": "GET",
-        "url": "/name"
+        "url": "/users/1/name"
     }
 }
 {% endhighlight %}
 
-When sent to the server to an endpoint using the **Batch Request** middleware, the server will perform a `GET` request to a local endpoint called `/name` and will return the result that looks like the following:
+When sent to the server to an endpoint using the **Batch Request** middleware, the server will perform a `GET` request to a local endpoint called `/users/1/name` and will return the result that looks like the following:
 
 {% highlight json %}
 {
@@ -37,6 +35,5 @@ When sent to the server to an endpoint using the **Batch Request** middleware, t
     }
 }
 {% endhighlight %}
-
 
 But that's not too exciting, when used for a single request, we're better off just using a single request. This library was built for batching. So let's dive in!
