--- a/requests/_posts/1900-01-02-batch.md
+++ b/requests/_posts/1900-01-02-batch.md
@@ -12,7 +12,49 @@ To add more than one request, just add more keys to the root level JSON object, 
 }
 {% endhighlight %}
 
-This is 3 requests in one blob of JSON. The server will execute each request and send back a JSON object with the same keys and the results of each request as the value for each key.
+This is 3 requests in one blob of JSON (with the request body replaced with `...` of course). The server will execute each request and send back a JSON object with the same keys and the results of each request as the value for each key.
 
-Note: **Batch Request** does not support arbitrary nesting of requests. To model dependencies and other tiered 
+Let's see an example more filled out. The JSON request we will `POST` to our endpoint using the **Batch Request** middleware:
+
+{% highlight json %}
+{
+    "myRequest1": {
+        "method": "GET",
+        "url": "/users/1/first_name"
+    },
+    "myRequest2": {
+        "method": "GET",
+        "url": "/users/1/email"
+    },
+    "myRequest3": {
+        "method": "GET",
+        "url": "/users/1/company"
+    },
+}
+{% endhighlight %}
+
+The response we receive:
+
+{% highlight json %}
+{
+    "myRequest1": {
+        "statusCode": 200,
+        "body": "Victor",
+        "headers": []
+    },
+    "myRequest2": {
+        "statusCode": 200,
+        "body": "victor@socialradar.com",
+        "headers": []
+    },
+    "myRequest3": {
+        "statusCode": 200,
+        "body": "SocialRadar",
+        "headers": []
+    },
+}
+{% endhighlight %}
+
+*This assumes of course we have these three endpoints on our server, one each for name, email, and company on a user which would be rather silly!*
+
 
