Swap url for uri

--- a/requests/_posts/1900-01-01-intro.md
+++ b/requests/_posts/1900-01-01-intro.md
@@ -19,7 +19,7 @@ Now let's add one super basic request:
 {
     "myRequest": {
         "method": "GET",
-        "url": "/users/1/name"
+        "uri": "/users/1/name"
     }
 }
 {% endhighlight %}
