--- a/requests/_posts/1900-01-02-batch.md
+++ b/requests/_posts/1900-01-02-batch.md
@@ -20,15 +20,15 @@ Let's see an example more filled out. The JSON request we will `POST` to our end
 {
     "myRequest1": {
         "method": "GET",
-        "url": "/users/1/first_name"
+        "uri": "/users/1/first_name"
     },
     "myRequest2": {
         "method": "GET",
-        "url": "/users/1/email"
+        "uri": "/users/1/email"
     },
     "myRequest3": {
         "method": "GET",
-        "url": "/users/1/company"
+        "uri": "/users/1/company"
     },
 }
 {% endhighlight %}
@@ -55,6 +55,6 @@ The response we receive:
 }
 {% endhighlight %}
 
-*This assumes of course we have these three endpoints on our server, one each for name, email, and company on a user which would be rather silly!*
+*This assumes of course we have these three endpoints on our server, one each for name, email, and company on a user which each return simply a string. I question my own API design as rather silly!*
 
 
