Update headers response

--- a/requests/_posts/1900-01-01-intro.md
+++ b/requests/_posts/1900-01-01-intro.md
@@ -30,10 +30,18 @@ When sent to the server to an endpoint using the **Batch Request** middleware, t
 {
     "myRequest": {
         "statusCode": 200,
-        "headers": [],
-        "body": "Victor"
+        "body": "Victor",
+        "headers": {
+            "x-powered-by": "Express",
+            "content-type": "text/html",
+            "date": "Wed, 06 Nov 2013 21:33:18 GMT",
+            "connection": "close",
+            "transfer-encoding": "chunked"
+        },
     }
 }
 {% endhighlight %}
 
-But that's not too exciting, when used for a single request, we're better off just using a single request. This library was built for batching. So let's dive in!
+But that's not too exciting, why would we use a batching library for a single request?
+
+This library was built for batching. So let's dive in!
