--- a/requests/_posts/1900-01-02-batch.md
+++ b/requests/_posts/1900-01-02-batch.md
@@ -40,17 +40,35 @@ The response we receive:
     "myRequest1": {
         "statusCode": 200,
         "body": "Victor",
-        "headers": []
+        "headers": {
+            "x-powered-by": "Express",
+            "content-type": "text/html",
+            "date": "Wed, 06 Nov 2013 21:33:18 GMT",
+            "connection": "close",
+            "transfer-encoding": "chunked"
+        }
     },
     "myRequest2": {
         "statusCode": 200,
         "body": "victor@socialradar.com",
-        "headers": []
+        "headers": {
+            "x-powered-by": "Express",
+            "content-type": "text/html",
+            "date": "Wed, 06 Nov 2013 21:33:18 GMT",
+            "connection": "close",
+            "transfer-encoding": "chunked"
+        }
     },
     "myRequest3": {
         "statusCode": 200,
         "body": "SocialRadar",
-        "headers": []
+        "headers": {
+            "x-powered-by": "Express",
+            "content-type": "text/html",
+            "date": "Wed, 06 Nov 2013 21:33:18 GMT",
+            "connection": "close",
+            "transfer-encoding": "chunked"
+        }
     },
 }
 {% endhighlight %}
