Tweaking docs, simplify batch response a bit for readability, add CNAME record

--- a/requests/_posts/1900-01-02-batch.md
+++ b/requests/_posts/1900-01-02-batch.md
@@ -40,38 +40,22 @@ The response we receive:
     "myRequest1": {
         "statusCode": 200,
         "body": "Victor",
-        "headers": {
-            "x-powered-by": "Express",
-            "content-type": "text/html",
-            "date": "Wed, 06 Nov 2013 21:33:18 GMT",
-            "connection": "close",
-            "transfer-encoding": "chunked"
-        }
+        ...
     },
     "myRequest2": {
         "statusCode": 200,
         "body": "victor@socialradar.com",
-        "headers": {
-            "x-powered-by": "Express",
-            "content-type": "text/html",
-            "date": "Wed, 06 Nov 2013 21:33:18 GMT",
-            "connection": "close",
-            "transfer-encoding": "chunked"
-        }
+        ...
     },
     "myRequest3": {
         "statusCode": 200,
         "body": "SocialRadar",
-        "headers": {
-            "x-powered-by": "Express",
-            "content-type": "text/html",
-            "date": "Wed, 06 Nov 2013 21:33:18 GMT",
-            "connection": "close",
-            "transfer-encoding": "chunked"
-        }
+        ...
     },
 }
 {% endhighlight %}
+
+Note I've omitted the rest of the request and replaced it with `...` because it's really large! It's the whole, unadulterated response object returned from [Request](https://github.com/mikeal/request) so to include the whole thing would make these docs far less readable.
 
 *This assumes of course we have these three endpoints on our server, one each for name, email, and company on a user which each return simply a string. I question my own API design as rather silly!*
 
