Update docs to match latest version

--- a/usage/_posts/1900-01-03-options.md
+++ b/usage/_posts/1900-01-03-options.md
@@ -3,31 +3,28 @@ title: options
 ---
 
 In order to customize, rather than just immediately invoking the function exported by
-**Batch Request** with no arguments, it's possible to pass in a JavaScript object representing any options
-you'd like to add.
+**Batch Request** with no arguments, it's possible to pass in a JavaScript object
+representing any options you'd like to add.
 
 {% highlight bash %}
-  // Instead of just getting the default options like so:
+  // Get the default options
   var batch = require('batch-request')();
 
-  // Specify them when this library is loaded like so:
-  var options = {
-      localOnly: true,
-      httpsAlways: true
-  };
-  var batch = require('batch-request')(options);
-
-  // Or as a shortcut:
+  // Specify that you only want max simultaneous requests at 5
   var batch = require('batch-request')({
-      localOnly: true,
-      httpsAlways: true
+      max: 5
   });
-
 {% endhighlight %}
 
 Then when you use Batch Request, it will use thes options.
 
 Available options:
+
+| Option            | Notes                                                                                                                                   | Default |
+| ----------------- | --------------------------------------------------------------------------------------------------------------------------------------- | ------- |
+| `max`             | This is the maximum number of requests **Batch Request** will accept in one batch. Any more than this max will result in a `400` error. | `20`    |
+| `validateRespond` | Whether or not to respond in the validation middleware. Setting to `false` leaves it up to you to respond.                              | `true`  |
+
 
 * `localOnly` - `true` or `false`. Defaults to `true`. If `true`, **batch request** will batch only local
   requests. This is the default in order to prevent the outside world from using this batch endpoint on
@@ -36,4 +33,3 @@ Available options:
   attacks.
 * `httpsAlways` - `true` or `false`. Defaults to `false`. If set to `true`, **batch request** will make
   force all requests over https even if the incoming object doesn't specify them as such.
-* `max` - a number representing the largest batch size the middleware will accept. Defaults to `20`.
