Added docs for dependencies, ensured full url in each example rather than a relative one, bumped version number

--- a/dependencies/_posts/1900-01-03-simple.md
+++ b/dependencies/_posts/1900-01-03-simple.md
@@ -7,11 +7,11 @@ For this one of the request objects does not have any dependencies and the secon
 {% highlight json %}
 {
     "myRequest1": {
-        "uri": "/users/1/first_name"
+        "uri": "http://api.mysite.com/users/1/first_name"
     },
     "myRequest2": {
         "dependency": "myRequest1",
-        "uri": "/users/1/email"
+        "uri": "http://api.mysite.com/users/1/email"
     }
 }
 {% endhighlight %}
