--- a/dependencies/_posts/1900-01-04-series.md
+++ b/dependencies/_posts/1900-01-04-series.md
@@ -7,15 +7,15 @@ In order to ensure items run in series, simply flag each as a dependency of the 
 {% highlight json %}
 {
     "myRequest1": {
-        "uri": "/users/1/first_name"
+        "uri": "http://api.mysite.com/users/1/first_name"
     },
     "myRequest2": {
         "dependency": "myRequest1",
-        "uri": "/users/1/email"
+        "uri": "http://api.mysite.com/users/1/email"
     },
     "myRequest3": {
         "dependency": "myRequest2",
-        "uri": "/users/1/company"
+        "uri": "http://api.mysite.com/users/1/company"
     }
 }
 {% endhighlight %}
