--- a/requests/_posts/1900-01-02-batch.md
+++ b/requests/_posts/1900-01-02-batch.md
@@ -20,15 +20,15 @@ Let's see an example more filled out. The JSON request we will `POST` to our end
 {
     "myRequest1": {
         "method": "GET",
-        "uri": "/users/1/first_name"
+        "uri": "http://api.mysite.com/users/1/first_name"
     },
     "myRequest2": {
         "method": "GET",
-        "uri": "/users/1/email"
+        "uri": "http://api.mysite.com/users/1/email"
     },
     "myRequest3": {
         "method": "GET",
-        "uri": "/users/1/company"
+        "uri": "http://api.mysite.com/users/1/company"
     },
 }
 {% endhighlight %}
