--- a/usage/_posts/1900-01-03-options.md
+++ b/usage/_posts/1900-01-03-options.md
@@ -26,10 +26,10 @@ Available options:
 | `validateRespond` | Whether or not to respond in the validation middleware. Setting to `false` leaves it up to you to respond.                              | `true`  |
 
 
-* `localOnly` - `true` or `false`. Defaults to `true`. If `true`, **batch request** will batch only local
-  requests. This is the default in order to prevent the outside world from using this batch endpoint on
-  your server as a proxy and making requests to other servers. If `false`, it will take any batch requests.
-  Note: Do not set this to `false` unless you have other validation middleware in place to prevent nasty
-  attacks.
-* `httpsAlways` - `true` or `false`. Defaults to `false`. If set to `true`, **batch request** will make
-  force all requests over https even if the incoming object doesn't specify them as such.
+<!-- * `localOnly` - `true` or `false`. Defaults to `true`. If `true`, **batch request** will batch only local -->
+<!--   requests. This is the default in order to prevent the outside world from using this batch endpoint on -->
+<!--   your server as a proxy and making requests to other servers. If `false`, it will take any batch requests. -->
+<!--   Note: Do not set this to `false` unless you have other validation middleware in place to prevent nasty -->
+<!--   attacks. -->
+<!-- * `httpsAlways` - `true` or `false`. Defaults to `false`. If set to `true`, **batch request** will make -->
+<!--   force all requests over https even if the incoming object doesn't specify them as such. -->
