Add more docs for multiple dependencies, add info about headers, bump to v0.0.4

--- a/options/_posts/1900-01-01-post.md
+++ b/options/_posts/1900-01-01-post.md
@@ -32,7 +32,7 @@ And the resulting response:
     "myRequest1": {
         "statusCode": "204",
         "body": null,
-        ...
+        "headers": {...}
     },
     "myRequest2": {
         "statusCode": "200",
@@ -40,8 +40,8 @@ And the resulting response:
             "first_name": "Victor",
             "email": "victor@socialradar.com",
             "company": "SocialRadar"
-        }
-        ...
+        },
+        "headers": {...}
     }
 }
 {% endhighlight %}
