--- a/requests/_posts/1900-01-02-batch.md
+++ b/requests/_posts/1900-01-02-batch.md
@@ -40,22 +40,34 @@ The response we receive:
     "myRequest1": {
         "statusCode": 200,
         "body": "Victor",
-        ...
+        "headers": {...}
     },
     "myRequest2": {
         "statusCode": 200,
         "body": "victor@socialradar.com",
-        ...
+        "headers": {...}
     },
     "myRequest3": {
         "statusCode": 200,
         "body": "SocialRadar",
-        ...
+        "headers": {...}
     },
 }
 {% endhighlight %}
 
-Note I've omitted the rest of the request and replaced it with `...` because it's really large! It's the whole, unadulterated response object returned from [Request](https://github.com/mikeal/request) so to include the whole thing would make these docs far less readable.
+Note, I've omitted the body of the headers as it's rather boring and not too helpful. But they'd all look something like this:
+
+{% highlight json %}
+{
+    "x-powered-by": "Express",
+    "content-type": "application/json; charset=utf-8",
+    "content-length": "81",
+    "date": "Mon, 16 Dec 2013 15:30:24 GMT",
+    "connection": "keep-alive" 
+}
+{% endhighlight %}
+
+I'll continue doing so throughout this documentation.
 
 *This assumes of course we have these three endpoints on our server, one each for name, email, and company on a user which each return simply a string. I question my own API design as rather silly!*
 
