--- a/options/_posts/1900-01-01-post.md
+++ b/options/_posts/1900-01-01-post.md
@@ -15,7 +15,8 @@ For example, to perform a POST followed by a GET in one request, use the followi
         "uri": "http://api.mysite.com/users/1",
         "body": {
             "first_name": "Victor"
-        }
+        },
+        "json": true
     },
     "myRequest2": {
         "method": "GET",
@@ -40,7 +41,7 @@ And the resulting response:
             "first_name": "Victor",
             "email": "victor@socialradar.com",
             "company": "SocialRadar"
-        },
+        }
         "headers": {...}
     }
 }
