Add documentation for new allowedHosts option

--- a/usage/_posts/1900-01-03-options.md
+++ b/usage/_posts/1900-01-03-options.md
@@ -24,6 +24,7 @@ Available options:
 | ----------------- | --------------------------------------------------------------------------------------------------------------------------------------- | ------- |
 | `max`             | This is the maximum number of requests **Batch Request** will accept in one batch. Any more than this max will result in a `400` error. | `20`    |
 | `validateRespond` | Whether or not to respond in the validation middleware. Setting to `false` leaves it up to you to respond.                              | `true`  |
+| `allowedHosts`    | Array list of strings which represent allowed hosts. For example `['socialradar.com', 'localhost:3000']`. Must include port if used. If any request is not in the list of allowedHosts, the **Batch Request** validator will return a 400 error. | `null`  |
 
 
 <!-- * `localOnly` - `true` or `false`. Defaults to `true`. If `true`, **batch request** will batch only local -->
