Fix a silly typo

--- a/usage/_posts/1900-01-03-options.md
+++ b/usage/_posts/1900-01-03-options.md
@@ -16,7 +16,7 @@ representing any options you'd like to add.
   });
 {% endhighlight %}
 
-Then when you use Batch Request, it will use thes options.
+Then when you use Batch Request, it will use these options.
 
 Available options:
 
